Creado mediante Colaboratory

--- a/notebooks/FAIRE-AI.ipynb
+++ b/notebooks/FAIRE-AI.ipynb
@@ -143,11 +143,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "WEhXs_006ZtO",
-        "outputId": "f0eeebdb-1509-436e-cefe-697f724e4e77",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "outputId": "ce919274-e11f-47a4-b86d-918e55e182d5"
       },
       "source": [
         "SEED = 123\n",
@@ -276,10 +276,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "fem5a3r36ZtT",
-        "outputId": "339c08e7-8456-47e9-9896-91c42f9c1dee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6d63a686-5c61-488d-d181-6e578d11e7b2"
       },
       "source": [
         "# Check!\n",
@@ -308,10 +308,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "eAkYWEhj6ZtV",
-        "outputId": "dfd411d6-d8c9-4478-ac1e-08c99efbec0a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "703fe844-469b-44f9-83bb-d9e961b329a5"
       },
       "source": [
         "print('Quantity by Class:')\n",
@@ -337,11 +337,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "htr3jZcB6ZtW",
-        "outputId": "18eac5d6-c79c-4693-caec-9a5cf7e5a702",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 304
-        }
+        },
+        "outputId": "d08046c1-7238-4d4d-bbb5-2da20573259e"
       },
       "source": [
         "\n",
@@ -381,11 +381,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "SqFOH_uR6Ztb",
-        "outputId": "48b3168c-fe27-4aea-d950-a4ba67438733",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 298
-        }
+        },
+        "outputId": "71cd88ce-bdb2-48d7-bec8-d77e539ef582"
       },
       "source": [
         "data['age'].plot.hist(bins=20)\n",
@@ -402,7 +402,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7f98208751d0>"
+              "<matplotlib.legend.Legend at 0x7fbef0e749e8>"
             ]
           },
           "metadata": {
@@ -430,11 +430,11 @@
       "metadata": {
         "scrolled": true,
         "id": "FEpx-xDO6Ztd",
-        "outputId": "48932740-b11f-4fa9-80c3-96c8a564671a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 298
-        }
+        },
+        "outputId": "94b0299e-3ccd-49f2-d16d-200844958110"
       },
       "source": [
         "data['purchase'].plot.hist()\n",
@@ -478,7 +478,7 @@
         "## Balance of class\n",
         "\n",
         "As result of generate 5K points using the funtion `SyntheticData` with `seed=123`, I obtain `3592 cases for class 1` and `1408 cases for class 0`, with an approximated `ratio of \"2.3:1\"`.\n",
-        "Although the balance of classes in the dataset is not perfect, the ratio between both is not different enough to <b>\"1\"</b> how to be shure about the need to apply specific strategies to solve the problem. As a first approach I will leave them."
+        "Although the balance of classes in the dataset gives a ratio not very near to <b>\"1\"</b>, it's not different enough how to be shure about the need to apply specific strategies to solve the problem. As a first approach I will leave them."
       ]
     },
     {
@@ -486,11 +486,11 @@
       "metadata": {
         "scrolled": true,
         "id": "E6XdWzfH6Ztf",
-        "outputId": "9eb954bd-9565-4739-a43b-d6511c579c86",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 312
-        }
+        },
+        "outputId": "abb3349a-2e71-4f12-a4e4-6f3a0ffd649a"
       },
       "source": [
         "sns.countplot(data=data,x='output')\n",
@@ -539,11 +539,11 @@
       "metadata": {
         "scrolled": true,
         "id": "8h8IsrZq6Ztg",
-        "outputId": "779fe8d0-0c3c-47f7-9b20-c2420c0f4364",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 312
-        }
+        },
+        "outputId": "2e393018-8210-4fcb-baf6-59bae82d97f4"
       },
       "source": [
         "sns.countplot(data=data,x='output',hue='sex')\n",
@@ -591,11 +591,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "o6mC0dxt6Zth",
-        "outputId": "85a5dc54-6795-4c5e-a530-fb4d1baa8f57",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 602
-        }
+        },
+        "outputId": "85a5dc54-6795-4c5e-a530-fb4d1baa8f57"
       },
       "source": [
         "# Distribution of Cases for Male (sex=1)\n",
@@ -605,7 +605,7 @@
         "                 height=4,plot_kws={'alpha':0.3})\n",
         "g.fig.suptitle('Distribution of Cases for \"Male\" (sex=1)')"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -639,11 +639,11 @@
       "metadata": {
         "scrolled": false,
         "id": "8NHRXZ4r6Zth",
-        "outputId": "7d38faa1-5f70-4dcc-908c-a383f214aa0b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 602
-        }
+        },
+        "outputId": "7d38faa1-5f70-4dcc-908c-a383f214aa0b"
       },
       "source": [
         "# Distribution of Cases for Female (sex=0)\n",
@@ -653,7 +653,7 @@
         "                 height=4,plot_kws={'alpha':0.3})\n",
         "g.fig.suptitle('Distribution of Cases for \"Female\" (sex=1)')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -695,18 +695,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "6PB7RX-h6Zti",
-        "outputId": "31987f43-458e-4ff6-a725-0a927ba46888",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 747
-        }
+        },
+        "outputId": "31987f43-458e-4ff6-a725-0a927ba46888"
       },
       "source": [
         "corr = data.drop(['output'], axis=1).corr()\n",
         "sns.clustermap(corr, cmap ='coolwarm', linewidths = 0.2,\n",
         "                    method = 'complete')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -743,7 +743,7 @@
       "source": [
         ""
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -754,7 +754,7 @@
       "source": [
         ""
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -784,7 +784,7 @@
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.ensemble import RandomForestClassifier"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -797,7 +797,7 @@
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=SEED, stratify=y)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -836,7 +836,7 @@
         "preprocessor = ColumnTransformer(transformers=[('num', numeric_transformer, numeric_columns)],\n",
         "                                 remainder='passthrough')"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -856,7 +856,7 @@
       "source": [
         "model = LogisticRegression(solver = 'liblinear',max_iter=1000)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -881,7 +881,7 @@
         "    ('classificator',model)\n",
         "])"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -932,7 +932,7 @@
         "  {'classificator__C':lr_C, 'classificator__penalty':reg}\n",
         "]"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -945,7 +945,7 @@
         "                      cv=5,return_train_score = True,\n",
         "                      scoring = 'roc_auc').fit(X_train, y_train['output'].ravel())"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -963,15 +963,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "wI0kULet6Ztv",
-        "outputId": "f317163b-5091-420f-f478-b2d21c7bbc13",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f317163b-5091-420f-f478-b2d21c7bbc13"
       },
       "source": [
         "search.best_estimator_['classificator']"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -999,7 +999,7 @@
       "source": [
         "results = pd.DataFrame(search.cv_results_)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1011,7 +1011,7 @@
         "l1_results = results.loc[results.param_classificator__penalty=='l1']\n",
         "l2_results = results.loc[results.param_classificator__penalty=='l2']"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1054,7 +1054,7 @@
         "    plt.ylabel('mean')\n",
         "    plt.legend()"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1062,11 +1062,11 @@
       "metadata": {
         "scrolled": false,
         "id": "_WF27CS66Ztx",
-        "outputId": "2daa0a16-31fc-4150-9694-aaae0f1db853",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 316
-        }
+        },
+        "outputId": "2daa0a16-31fc-4150-9694-aaae0f1db853"
       },
       "source": [
         "plot_train_test(l1_results, parameter='C', color='blue', label=\"L1\")\n",
@@ -1074,7 +1074,7 @@
         "plt.title('Regularization \"L1\"')\n",
         "plt.ylim(0.70,0.77)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1108,11 +1108,11 @@
       "metadata": {
         "scrolled": true,
         "id": "-GA_QsJF6Ztx",
-        "outputId": "ff7e4fe4-ecb8-40b6-f5e8-d2df8d6724e0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 299
-        }
+        },
+        "outputId": "ff7e4fe4-ecb8-40b6-f5e8-d2df8d6724e0"
       },
       "source": [
         "plot_train_test(l2_results, parameter='C', color='red', label=\"L2\")\n",
@@ -1120,7 +1120,7 @@
         "plt.xscale('log')\n",
         "#plt.ylim(0.88,0.91)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1176,7 +1176,7 @@
       "source": [
         "model = RandomForestClassifier(random_state=SEED,max_features=None)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1200,7 +1200,7 @@
         "    ('classificator',model)\n",
         "])"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1282,7 +1282,7 @@
         "   'classificator__min_impurity_decrease':min_impurity_decrease}\n",
         " ]"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1296,7 +1296,7 @@
         "                      cv=5,return_train_score = True,\n",
         "                      scoring = 'roc_auc').fit(X_train, y_train['output'].ravel())"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1312,16 +1312,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "b6nnGFUm6Zt4",
-        "outputId": "7b1266dd-94b1-4716-ef6d-5dd308430180",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7b1266dd-94b1-4716-ef6d-5dd308430180"
       },
       "source": [
         "best_params = search.best_estimator_['classificator'].get_params()\n",
         "best_params"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1363,7 +1363,7 @@
       "source": [
         "results = pd.DataFrame(search.cv_results_)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1376,7 +1376,7 @@
         "                             (results['param_classificator__min_samples_split']==best_params['min_samples_split']) & \\\n",
         "                             (results['param_classificator__min_impurity_decrease']==best_params['min_impurity_decrease'])]"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1384,18 +1384,18 @@
       "metadata": {
         "scrolled": true,
         "id": "lHfKT8ky6Zt7",
-        "outputId": "a9c63a2a-b7ce-436e-90bc-a92a327dc0d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 317
-        }
+        },
+        "outputId": "a9c63a2a-b7ce-436e-90bc-a92a327dc0d1"
       },
       "source": [
         "plot_train_test(n_estim_result, parameter='n_estimators',color='red',label='best')\n",
         "plt.xscale('log')\n",
         "plt.title('N-Estimators (best = 10)')"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1434,7 +1434,7 @@
         "                                       (results['param_classificator__n_estimators']==best_params['n_estimators']) & \\\n",
         "                                       (results['param_classificator__min_impurity_decrease']==best_params['min_impurity_decrease'])]"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1442,16 +1442,16 @@
       "metadata": {
         "scrolled": true,
         "id": "74OP4lP16Zt-",
-        "outputId": "cf1734cb-08ed-4592-f576-2881dfa6eb85",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 280
-        }
+        },
+        "outputId": "cf1734cb-08ed-4592-f576-2881dfa6eb85"
       },
       "source": [
         "plot_train_test(min_sample_split_results, parameter='min_samples_split',color='red',label='best')"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1476,7 +1476,7 @@
       "source": [
         ""
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1489,23 +1489,23 @@
         "                             (results['param_classificator__min_samples_split']==best_params['min_samples_split']) & \\\n",
         "                             (results['param_classificator__min_impurity_decrease']==best_params['min_impurity_decrease'])]"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "30NfEcfu6Zt_",
-        "outputId": "0d684cb1-7bc8-462c-ecf4-1e15c97d03f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 280
-        }
+        },
+        "outputId": "0d684cb1-7bc8-462c-ecf4-1e15c97d03f2"
       },
       "source": [
         "plot_train_test(max_depth_results, parameter='max_depth',color='red',label='best')"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1530,7 +1530,7 @@
       "source": [
         ""
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1543,7 +1543,7 @@
         "                             (results['param_classificator__min_samples_split']==0.01) & \\\n",
         "                             (results['param_classificator__n_estimators']==10)]"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1551,16 +1551,16 @@
       "metadata": {
         "scrolled": true,
         "id": "RZ89U-z06ZuB",
-        "outputId": "9c410a53-c5b9-4618-b872-2bc432dca0d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 280
-        }
+        },
+        "outputId": "9c410a53-c5b9-4618-b872-2bc432dca0d6"
       },
       "source": [
         "plot_train_test(min_impurity_decrease_results, parameter='min_impurity_decrease',color='red',label='best')"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1585,7 +1585,7 @@
       "source": [
         ""
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1704,7 +1704,7 @@
       "source": [
         "from sklearn.model_selection import cross_val_score"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1715,23 +1715,23 @@
       "source": [
         "pipeline = Pipeline(steps = [('clasificador',RandomForestClassifier(random_state = SEED,n_estimators = 50))])"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Upw0Zrp56ZuC",
-        "outputId": "6a8b82f5-2c2c-4d5a-a8f8-e39354b8e43b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6a8b82f5-2c2c-4d5a-a8f8-e39354b8e43b"
       },
       "source": [
         "rfcv = cross_val_score(pipeline, X_train, y_train['output'].ravel(), cv=5,scoring = 'roc_auc')\n",
         "print(np.mean(rfcv),np.std(rfcv))\n"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
