Creado mediante Colaboratory

--- a/notebooks/FAIRE-AI.ipynb
+++ b/notebooks/FAIRE-AI.ipynb
@@ -588,6 +588,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AE-TJ9Mb6Zti"
+      },
+      "source": [
+        "## Correlation of Variables\n",
+        "\n",
+        "Understand the intrinsec structure of a dataset help to define strategies to abord the resolution of the problem. Next graphs correspond to the distribution of cases by sex. For both cases the overlap between the distributions of values for class 1 and class 2 anticipates that solutions to the problem will be low performance. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "o6mC0dxt6Zth",
@@ -651,7 +662,7 @@
         "                 vars=['age','purchase'], \n",
         "                 hue=\"output\", \n",
         "                 height=4,plot_kws={'alpha':0.3})\n",
-        "g.fig.suptitle('Distribution of Cases for \"Female\" (sex=1)')"
+        "g.fig.suptitle('Distribution of Cases for \"Female\" (sex=0)')"
       ],
       "execution_count": null,
       "outputs": [
@@ -685,10 +696,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "AE-TJ9Mb6Zti"
+        "id": "X7qgiJ1_5qBl"
       },
       "source": [
-        "## Correlation of Variables"
+        "from the correlation matrix plot I can deduce that feature \"sex\" is independent of the other two, however features \"age\" and \"purchase\" are correlated with a significant value. From here we can deduce that the implementation of a Logistic Regression Model will need some kind of regularization."
       ]
     },
     {
@@ -765,7 +776,9 @@
       "source": [
         "# Construction of the models <a class=\"anchor\" id=\"models\"></a>\n",
         "\n",
-        "[Return to index...](#index)"
+        "[Return to index...](#index)\n",
+        "\n",
+        "Before to start to constructs the models I will separate in ``train`` and ``test`` the dataset. I need construct a model to resolve the problem and at the same time I need test its performance. Work in both stages with all the dataset will generate ``overfiting``, thats means over-adjust the solution to the this particular dataset, losing predictive power.\n"
       ]
     },
     {
@@ -784,7 +797,7 @@
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.ensemble import RandomForestClassifier"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -797,7 +810,7 @@
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=SEED, stratify=y)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -819,7 +832,7 @@
       "source": [
         "### Preprocessing\n",
         "\n",
-        "In general, learning algorithms benefit from standardization of the data set. For instance,  the \"l1\" and \"l2\" regularizers of linear models assume that all features are centered around zero and have variance in the same order. If a feature has a variance that is orders of magnitude larger than others, it might dominate the objective function and make the estimator unable to learn from other features correctly as expected. Because of this, the numeric variables in the dataset are preprocessed with the `StandardScaler` function prior to their use in the model."
+        "In general, learning algorithms benefit from standardization of the data set. For instance,  the \"l1\" and \"l2\" regularizers of linear models assume that all features are centered around zero and have variance in the same order. If a feature has a variance that is orders of magnitude larger than others, it might dominate the objective function and make the estimator unable to learn from other features correctly as expected. Because of this, the numeric variables \"age\" and \"purchase\" in the dataset are preprocessed with the `StandardScaler` function prior to their use in the model. In the case of the categorical variable \"sex\" I don't need make nothing because it already has the format of ``OneHotEncoding``."
       ]
     },
     {
@@ -836,7 +849,7 @@
         "preprocessor = ColumnTransformer(transformers=[('num', numeric_transformer, numeric_columns)],\n",
         "                                 remainder='passthrough')"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -856,7 +869,7 @@
       "source": [
         "model = LogisticRegression(solver = 'liblinear',max_iter=1000)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -881,7 +894,7 @@
         "    ('classificator',model)\n",
         "])"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -931,6 +944,53 @@
         "param_grid = [\n",
         "  {'classificator__C':lr_C, 'classificator__penalty':reg}\n",
         "]"
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "llm0vk30JH7Q"
+      },
+      "source": [
+        "If "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Xosu9Dv-G-yo",
+        "outputId": "35eedc66-c065-4d2a-881c-516079d2cff8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "quantity = 1\n",
+        "for param in param_grid[0].keys():\n",
+        "  quantity *= len(param_grid[0][param])\n",
+        "\n",
+        "print(f'Quantity = {quantity}')"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Quantity = 22\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G5GIrEIVG-3J"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
