Creado mediante Colaboratory

--- a/notebooks/FAIRE-AI.ipynb
+++ b/notebooks/FAIRE-AI.ipynb
@@ -960,25 +960,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Xosu9Dv-G-yo",
-        "outputId": "35eedc66-c065-4d2a-881c-516079d2cff8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Xosu9Dv-G-yo",
+        "outputId": "30b120e4-3f6d-4ddf-9ea0-85f8cba5b078"
       },
       "source": [
-        "quantity = 1\n",
-        "for param in param_grid[0].keys():\n",
-        "  quantity *= len(param_grid[0][param])\n",
+        "def count_models_to_train(param_grid):\n",
+        "  quantity = 1\n",
+        "  for param in param_grid[0].keys():\n",
+        "    quantity *= len(param_grid[0][param])\n",
+        "  return quantity\n",
         "\n",
-        "print(f'Quantity = {quantity}')"
+        "print('WARNING!!!')\n",
+        "print(f'Quantity of model to train : {count_models_to_train(param_grid)}')"
       ],
-      "execution_count": 37,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Quantity = 22\n"
+            "WARNING!!!\n",
+            "Quantity of model to train : 22\n"
           ],
           "name": "stdout"
         }
@@ -1342,8 +1346,33 @@
         "   'classificator__min_impurity_decrease':min_impurity_decrease}\n",
         " ]"
       ],
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Wc788d3dNerg",
+        "outputId": "b0fa0f72-f805-4a0e-d7c0-c14387236ba1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print('WARNING!!!'*10)\n",
+        "print(f'Quantity of model to train : {count_models_to_train(param_grid)}')"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING!!!WARNING!!!WARNING!!!WARNING!!!WARNING!!!WARNING!!!WARNING!!!WARNING!!!WARNING!!!WARNING!!!\n",
+            "Quantity of model to train : 4200\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
