Creado mediante Colaboratory

--- a/notebooks/FAIRE-AI.ipynb
+++ b/notebooks/FAIRE-AI.ipynb
@@ -1352,11 +1352,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Wc788d3dNerg",
-        "outputId": "b0fa0f72-f805-4a0e-d7c0-c14387236ba1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Wc788d3dNerg",
+        "outputId": "b0fa0f72-f805-4a0e-d7c0-c14387236ba1"
       },
       "source": [
         "print('WARNING!!!'*10)\n",
@@ -1628,9 +1628,9 @@
         "id": "paSkq_Y_6ZuA"
       },
       "source": [
-        "min_impurity_decrease_results = results.loc[(results['param_classificator__max_depth']==3) & \\\n",
-        "                             (results['param_classificator__min_samples_split']==0.01) & \\\n",
-        "                             (results['param_classificator__n_estimators']==10)]"
+        "min_impurity_decrease_results = results.loc[(results['param_classificator__max_depth']==best_params['max_depth']) & \\\n",
+        "                             (results['param_classificator__min_samples_split']==best_params['min_samples_split']) & \\\n",
+        "                             (results['param_classificator__n_estimators']==best_params['n_estimators'])]"
       ],
       "execution_count": null,
       "outputs": []
