Creado mediante Colaboratory

--- a/notebooks/FAIRE-AI.ipynb
+++ b/notebooks/FAIRE-AI.ipynb
@@ -49,12 +49,10 @@
         "id": "O1C3kaYf6ZtI"
       },
       "source": [
-        "# Syntetic Data Points <a class=\"anchor\" id=\"SynteticData\"></a>\n",
+        "# Syntetic Data Points \n",
         "\n",
-        "[Return tu index....](#index)\n",
-        "\n",
-        "\n",
-        "I define the class ``SyntheticData`` for create a synthetic dataset having 5k points. For reproducibility of the results it's posible set the parameter ``seed`` to initialize from the random state"
+        "Defino la clase ``SyntheticData`` para crear conjuntos de datos sintéticos. Cada punto que se genera contiene los features \"age\", \"sex\", \"purchase\" y \"output\" con distribuciones de valores acordes a los requerimientos solicitados. \n",
+        "Para asegurar la reproducción de los resultados es necesario establecer un valor para ``seed`` el cual inicializará el estado aleatorio."
       ]
     },
     {
@@ -71,23 +69,25 @@
         "  def __init__(self, seed):\n",
         "    random.seed(seed)\n",
         "            \n",
-        "  def generate_dataset(self,points):\n",
+        "  def generate_dataset(self, n):\n",
         "    dataset = pd.DataFrame(columns=['sex','age','purchase','output'])\n",
-        "    dataset['age'] = random.random(size=1)<0.4\n",
-        "    dataset['sex'] = random.gamma(shape=8, scale=4, size=1)\n",
-        "    dataset['purchase'] = dataset.apply(lambda x: __purchase(x['age']))\n",
-        "    dataset['output'] = dataset.apply(lambda x: __output(x['age','sex','purchase']))\n",
-        "    \n",
+        "    dataset['sex'] = random.random(size=n)<0.4\n",
+        "    dataset['sex'] = dataset['sex'].astype(int)\n",
+        "    dataset['age'] = random.gamma(shape=8, scale=4, size=n)\n",
+        "    dataset['age'] = dataset['age'].astype(int)\n",
+        "    dataset['purchase'] = dataset.apply(lambda x: self.__purchase(x['age']),axis=1)\n",
+        "    dataset['output'] = dataset.apply(lambda x: self.__output(x['sex'],x['age'],x['purchase']),axis=1)\n",
+        "    dataset['output'] = dataset['output'].astype(int)\n",
         "    return dataset\n",
         "\n",
         "  def __purchase(self, age):\n",
         "    return float(random.uniform(500,550,1)-10*age*random.uniform(-2,0.01,1))\n",
         "        \n",
-        "  def __output(self,sex,age,purchase):\n",
+        "  def __output(self, sex, age, purchase):\n",
         "    prob = 0.3*sex+(0.2 if age>30 else 0.4)+(0.3 if purchase>100 else 0)\n",
         "    return int(random.random(size=1)<prob)"
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -98,17 +98,17 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "a5b3a372-3011-4ecb-ec06-9227d2445962"
+        "outputId": "5d681851-4131-47e2-9649-bd97f2890551"
       },
       "source": [
         "SEED = 123\n",
         "\n",
-        "gen = SyntheticData(seed=SEED)\n",
+        "gen = SyntheticData(SEED)\n",
         "data = gen.generate_dataset(5000)\n",
         "\n",
         "data.head()"
       ],
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,56 +141,56 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>0.0</td>\n",
-              "      <td>21.0</td>\n",
-              "      <td>777.380212</td>\n",
-              "      <td>0.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>16</td>\n",
+              "      <td>765.799599</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>0.0</td>\n",
-              "      <td>23.0</td>\n",
-              "      <td>820.954679</td>\n",
-              "      <td>0.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>33</td>\n",
+              "      <td>1013.329786</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>0.0</td>\n",
-              "      <td>29.0</td>\n",
-              "      <td>986.853758</td>\n",
-              "      <td>1.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>67</td>\n",
+              "      <td>1030.105560</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>0.0</td>\n",
-              "      <td>24.0</td>\n",
-              "      <td>672.994341</td>\n",
-              "      <td>1.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>28</td>\n",
+              "      <td>683.878087</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>0.0</td>\n",
-              "      <td>20.0</td>\n",
-              "      <td>661.033301</td>\n",
-              "      <td>1.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>44</td>\n",
+              "      <td>1237.708677</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   sex   age    purchase  output\n",
-              "0  0.0  21.0  777.380212     0.0\n",
-              "1  0.0  23.0  820.954679     0.0\n",
-              "2  0.0  29.0  986.853758     1.0\n",
-              "3  0.0  24.0  672.994341     1.0\n",
-              "4  0.0  20.0  661.033301     1.0"
+              "   sex  age     purchase  output\n",
+              "0    0   16   765.799599       0\n",
+              "1    1   33  1013.329786       1\n",
+              "2    1   67  1030.105560       0\n",
+              "3    0   28   683.878087       1\n",
+              "4    0   44  1237.708677       0"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 37
         }
       ]
     },
