Creado mediante Colaboratory

--- a/notebooks/FAIRE-AI.ipynb
+++ b/notebooks/FAIRE-AI.ipynb
@@ -745,7 +745,7 @@
       "source": [
         "## La construcción de los modelos\n",
         "\n",
-        "Antes de empezar a construir los modelos me separaré en el tren y probaré el conjunto de datos. Necesito construir un modelo para resolver el problema y al mismo tiempo necesito probar su rendimiento. Trabajar en ambas etapas con todo el conjunto de datos generará sobreajuste, es decir, sobreajustar la solución a este conjunto de datos en particular, perdiendo poder de predicción.\n"
+        "Antes de empezar a construir los modelos separaré el conjunto de datos en ``train`` y ``test``. El primero lo usaremos para el ajuste de los hiperparametros y entrenamiento del modelo, mientras que el segundo para la evaluación del mismo.\n"
       ]
     },
     {
@@ -797,9 +797,12 @@
         "id": "Ye1ZLGbJ6Ztm"
       },
       "source": [
-        "### Preprocessing\n",
+        "### Preprocesamiento\n",
         "\n",
-        "In general, learning algorithms benefit from standardization of the data set. For instance,  the \"l1\" and \"l2\" regularizers of linear models assume that all features are centered around zero and have variance in the same order. If a feature has a variance that is orders of magnitude larger than others, it might dominate the objective function and make the estimator unable to learn from other features correctly as expected. Because of this, the numeric variables \"age\" and \"purchase\" in the dataset are preprocessed with the `StandardScaler` function prior to their use in the model. In the case of the categorical variable \"sex\" I don't need make nothing because it already has the format of ``OneHotEncoding``."
+        "El preprocesamiento de los datos cumple la función de preparan los datos para la ingesta por un modelo. \n",
+        "Su objetivo es generar las condiciones para que el modelo pueda funcionar lo mejor posible con los datos disponibles.\n",
+        "El tipo de preprocesamiento que se le debe dar a los datos depende del tipo de variable que es, la distribución que posea, etcetera, pero especialmente depende del modelo con el que se piensa trabajar.\n",
+        "Existen muchas formas de preprocesamiento de los datos, pero en general, los algoritmos de aprendizaje se benefician de la normalización del conjunto de datos. Por ejemplo, los regularizadores \"l1\" y \"l2\" de los modelos lineales suponen que todas los features están centradas en torno a cero y tienen una varianza en el mismo orden. Si una característica tiene una varianza de órdenes de magnitud mayores que otras, podría dominar la función objetiva y hacer que el estimador no pueda aprender de otras características correctamente como se espera. Por ello, las variables numéricas \"edad\" y \"compra\" del conjunto de datos se procesan previamente con la función del StandardScaler antes de su utilización en el modelo. En el caso de la variable categórica \"sexo\" no necesito hacer nada porque ya tiene el formato de OneHotEncoding."
       ]
     },
     {
@@ -834,6 +837,7 @@
         "id": "7uaEdVJ-6Ztp"
       },
       "source": [
+        "\n",
         "model = LogisticRegression(solver = 'liblinear',max_iter=1000)"
       ],
       "execution_count": 18,
